--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+
+/* ------ main menu ----- */
+#main-header{
+	width: 100%;
+	height: 150px;
+}
+#nav-user{
+	height: 20px;
+}
+#nav-header{
+	width: 100%;
+	height: 90px;
+	background-color:red;
+}
+
+
+/* ------ cart ----- */
 #cart{
 	width: 302px;
     padding: 5px;
