--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ menu, nav,input{
 }
 
 /* ------ GENRE ----- */
-#genre{
+#music-genre{
 	width: 302px;
     padding: 5px;
     background-color: #F0F0F0;
