--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ menu, nav,input{
 #nav-header{
 	width: 100%;
 	height: 80px;
-	background-color:red;
+	background-color: fb0002;
 }
 .search{
 	width: 250px;
@@ -55,3 +55,10 @@ menu, nav,input{
     background-color: #F0F0F0;
 }
 
+#music-genre div{
+    border-bottom: 1px solid #F0F0F0;
+    padding: 5px;
+    background-color: #fb0002;
+    color: white;
+    font-size: 18px;
+}
