--- a/style.css
+++ b/style.css
@@ -10,26 +10,62 @@ menu, nav,input{
     vertical-align: baseline;
     outline:none;
 }
-
+body{
+	min-width: 1200px;
+    max-width: 1240px;
+    direction: ltr;
+    font-family: sans-serif;
+    margin: 0 auto;
+    border: solid 2px #000;
+}
 /* ------ MAIN MENU ----- */
+#wrapper{
+	width: 900px;
+	margin: 0 auto;
+}
 #main-header{
 	width: 100%;
 	height: 150px;
 }
 #nav-user{
 	height: 20px;
+	padding: 10px;
+}
+#nav-user ul li{
+	float: left;
+    margin-right: 20px;
+    list-style: none;
+}
+#nav-user ul li a{
+	text-decoration: none;
+	color: #000;
+}
+#nav-user ul li a:hover{
+	background-color: red;
 }
 #nav-header{
 	width: 100%;
 	height: 80px;
 	background-color:red;
 }
+#nav-header img{
+	height: 80px;
+    width: auto;
+    float: left;
+}
+#find-album{
+	width: 252px;
+    height: 80px;
+    float: left;
+    margin-left: 100px;
+}
 .search{
-	width: 250px;
-	height: 25px;
-	margin-left: 200px;
-	border:1px solid black;
-	background-color:white;
+    width: 250px;
+    height: 25px;
+    border: 1px solid rgb(132, 132, 132);
+    background-color: white;
+    float: left;
+    margin-top: 25px;
 }
 
 /* ------ CART ----- */
