--- a/style.css
+++ b/style.css
@@ -15,29 +15,33 @@ body{
     direction: ltr;
     font-family: sans-serif;
     margin: 0 auto;
+    background-color:#F0F0F0;
 }
 /* ------ MAIN MENU ----- */
 
-#main-header{
+header{
 	width: 100%;
-	height: 150px;
+	height: 120px;
 }
-#nav-user{
+/*--- navigation---*/
+nav{
 	height: 20px;
 	padding: 10px;
+	background-color:white;
 }
-#nav-user ul li{
+nav ul li{
 	float: left;
-    margin-right: 20px;
+    margin-left: 15px;
     list-style: none;
 }
-#nav-user ul li a{
+nav ul li a{
 	text-decoration: none;
 	color: #000;
 }
-#nav-user ul li a:hover{
+nav ul li a:hover{
 	background-color: red;
 }
+
 #nav-header{
 	width: 100%;
 	height: 80px;
@@ -48,25 +52,29 @@ body{
     width: auto;
     float: left;
 }
-#find-album{
-	width: 252px;
-    height: 80px;
-    float: left;
-    margin-left: 100px;
-}
+
 .search{
-    width: 250px;
+    width: 270px;
     height: 25px;
     border: 1px solid rgb(132, 132, 132);
     background-color: white;
     float: left;
     margin-top: 25px;
+    margin-left: 111px;
 }
-img .logo{
+img.logo{
 	height:94px;
 	width: 226px;
-	padding-left:15px;	
+	padding-left:10px;	
 }
+
+
+/*   ----- ASIDE ----   */
+aside{
+	padding:10px;
+}
+
+
 /* ------ CART ----- */
 #cart{
 	width: 302px;
@@ -97,3 +105,4 @@ img .logo{
     color: white;
     font-size: 18px;
 }
+
