--- a/style.css
+++ b/style.css
@@ -25,27 +25,47 @@ header{
 }
 /*--- navigation---*/
 nav{
-	height: 20px;
-	padding: 10px;
+	height: 40px;
 	background-color:white;
 }
 nav ul li{
 	float: left;
-    margin-left: 15px;
+    padding: 11px 10px;
     list-style: none;
+}
+nav ul li {
+    transform: translateZ(0);
+}
+nav ul li:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: #ED0019;
+    transform: scaleY(0);
+    transform-origin: 50% 95%;
+    transition-property: transform;
+    transition-duration: 0.2s;
+    transition-timing-function: ease-out;
+}
+nav ul li:hover:before, nav ul li:focus:before, nav ul li:active:before {
+    transform: scaleY(1);
+}
+nav ul li:first-child{
+    margin-left: 15px;
 }
 nav ul li a{
 	text-decoration: none;
 	color: #000;
 }
-nav ul li a:hover{
-	background-color: red;
-}
 
 #nav-header{
 	width: 100%;
 	height: 80px;
-	background-color: red;
+	background-color: #ED0019;
 }
 #nav-header img{
 	height: 80px;
@@ -107,7 +127,10 @@ aside{
 }
 #music-genre div:active{
 	background-color: #000;
-	cursor:pointer;
 }
 
+#music-genre div:hover{
+    box-shadow: inset 0px 1px 5px 0 rgba(0, 0, 0, 0.49);
+    cursor: pointer;
+}
 
