--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ nav ul li{
 #nav-header{
 	width: 100%;
 	height: 80px;
-	background-color: #ED0019;
+	background-color: #FD0002;
 }
 #nav-header img{
 	height: 80px;
