--- a/style.css
+++ b/style.css
@@ -15,7 +15,11 @@ body{
     direction: ltr;
     font-family: sans-serif;
     margin: 0 auto;
-    background-color:#F0F0F0;
+    background-color:#E3E3E3;
+}
+.wrapper{
+    width: 1200px;
+    margin: 0 auto;
 }
 /* ------ MAIN MENU ----- */
 
@@ -94,11 +98,11 @@ img.logo{
 }
 
 
-/*   ----- ASIDE ----   */
+/*   ----- ASIDE ----   
 aside{
 	padding:10px;
 }
-
+*/
 
 /* ------ CART ----- */
 #cart{
@@ -139,3 +143,34 @@ aside{
     cursor: pointer;
 }
 
+/*____CHECKOUT____*/
+#content{
+    width: 100%;
+    height: 500px;
+    margin-top: 40px;
+}
+#main{
+    background-color: blue;
+    width: 75%;
+    height: 400px;
+    float: left;
+}
+#main h1,  #content aside h1{
+    background-color: #fff;
+    padding-left: 4%;
+    margin: 0;
+    padding: 10px;
+}
+#main h1{
+    width: 98%;
+}
+
+#content aside{
+    width: 20%;
+    background-color: red;
+    height: 200px;
+    float: right;
+}
+ #content aside h1{
+    width: 92%;
+ }
