--- a/style.css
+++ b/style.css
@@ -187,6 +187,8 @@ aside{
     width: 100%;
     height: 30%;
     background: rgba(0, 0, 0, 0.5)
+    margin-top: -63px;
+    position: relative;
 }
 #head-albums p.head-name{
     color:white;
