--- a/checkout.css
+++ b/checkout.css
@@ -6,7 +6,7 @@ ol, ul {
 }
 .check-out-h1{
   width: 99%;
-  height: 35px;
+  height: 40px;
   background-color: #fff;
   padding-left: 15px;
 }
@@ -220,7 +220,7 @@ a{
 }
 #billingInfo{
   border: solid 1px #999;
-  padding: 15px 15px 0 15px;
+  padding: 15px;
   width: 98%;
   margin-bottom: 15px;
 
@@ -247,11 +247,12 @@ input{
   float: left;
 }
  .btn{
-  width: 100px;
   height: 40px;
   float: right;
   background: #333;
-  color: #fff;  
+  color: #fff; 
+  padding: 0 15px; 
+  margin: 10px 10px;
 }
 .row-half .btn:hover{
   background-color: #666;
