--- a/style.css
+++ b/style.css
@@ -340,28 +340,76 @@ main .info-head p.head-artist{
 
 /*__________*/
 /*__LOG_IN__*/
-
+.btn:hover{
+    background-color: grey;
+}
 .regFile{
     width: 558px;
     float: left;
-    border: solid 1px;
-    height: 400px;
+    border: solid 1px #848484;
+    height: 280px;
     padding: 15px;
     background-color: #fff;
 }
 .regFile header{
-    border-bottom: solid 1px grey;
+    border-bottom: solid 1px #848484;
     height: 30px;
+    color: red;
 }
 #newCostumers{
     margin-right: 20px;
 
 }
+#registrCostumers label, #registr label{
+    display: block;
+    font-weight: 900;
+}
+#registrCostumers input[type=email],#registrCostumers input[type=password],
+#registr input{
+    border: solid 1px #848484;
+    width: 75%;
+    height: 25px;
+    margin: 7px 0;
+    display: block;
+}
+#registr{
+    display: none;
+    width: 300px;
+    padding: 20px;
+    margin: 0 auto;
+    background: #fff;
+    box-shadow: 3px 4px 19px 9px #ABABAB;
+    z-index: 10000;
+    position: absolute;
+    left: 30%;
+    top: 17%;
+
+}
+#registr input#lastName{
+    margin-bottom: 20px;
+}
+#registr input{
+    width: 95%;
+}
+#registr #regBtn{
+    height: 30px;
+    width: 100%;
+}
+#registr h2{
+    margin: 0px 0px 20px 0px;
+    color: grey;
+    text-align: center;
+}
+#registr p{
+    float: right;
+    font-size: 17px;
+    color: #DFDFDF;
+}
 .regFile p{
     text-align: justify;
     padding: 20px 0;
+    line-height: 1.3;
 }    
 .regFile .btn{
-    width: 200px;
     float: left;
 }
