--- a/style.css
+++ b/style.css
@@ -304,7 +304,7 @@ main .info-head p.head-artist{
     margin-left: 15px;
 }
 
-#bread-crump{
+#bread-crumb{
     width: 858px;
     height: 20px;
     padding: 10px;
