--- a/style.css
+++ b/style.css
@@ -503,7 +503,7 @@ span.outStock{
     display: block;
 }
 #registr{
-    display: none;
+    /*display: none;*/
     width: 300px;
     padding: 20px;
     margin: 0 auto;
