--- a/checkout.css
+++ b/checkout.css
@@ -1,15 +1,96 @@
+
+main{
+  margin:0;
+  padding:0;
+  width: 100%;
+}
+.chakout{
+  width: 900px;
+  margin:0 auto;
+  min-height: 100%;
+  height:1100px
+}
+.checkout-status{
+  float:left;
+  width: 20%;
+  height:60px;
+  margin-left:10px
+}
+.static-info{
+  width: 100%;
+  height: 30px;
+  background-color: #fff;
+  padding-left: 15px;
+  margin-top: 10px; 
+}
+
+.static-checkout-info{
+  width: 100%;
+  height: 60px;
+  background-color: #fff;
+  padding-left: 15px;
+  margin-left: 15px;
+}
+.checkout-status-nav{
+  float:left;
+  width: 100%;
+  height:60px;
+  margin-left:15px;
+  background-color: gray;
+  margin-top:10px;
+  padding-left: 15px;
+  color:white;
+}
+
+.checkout-status-nav a{
+  color: white;
+  display: inline-table;
+  margin-top: 20px;
+  font-size: 14px;
+  text-decoration: underline;
+}
+
+/*a:hover{
+  
+}*/
+
+.billing-status{
+  float:left;
+  width: 100%;
+  height:auto;
+  margin-left:15px;
+  background-color: inherit;
+  margin-top:10px;
+  padding-left: 15px;
+  border:1px solid grey;
+}
+
+.billing-status p{
+  padding-top:3px;
+  padding-bottom:3px;
+  color:grey;
+  font-size:13px;
+  text-align: left;
+}
+/* //////////////////////////// */
+
+
 o-l, ul {
   list-style: none;
 }
 #checkout-content{
   width: 75%;
+  float:left;
 }
+
+
 .check-out-h1{
-  width: 99%;
+  width: 95%;
   height: 40px;
   background-color: #fff;
   padding-left: 15px;
 }
+
 .label-half{
   float: left;
   width: 50%;
@@ -191,12 +272,17 @@ a{
   height: 18px;
   font-size: 14px;
   padding: 5px;
+  padding-left: 10px;
+  margin-top: 20px;
   margin-bottom: 10px;
+}
 
+.active{
+    background-color: red;
 }
-.sectionHead.one, .sectionHead.two, .sectionHead.three{
+/*.sectionHead.one .active, .sectionHead.two .active, .sectionHead.three .active{
   background-color: red;
-}
+}*/
 .sectionHead.one span, .sectionHead.two span, .sectionHead.three span{
   background-image: url(Images/back-spam-active.png);
   background-repeat: no-repeat;
@@ -218,13 +304,23 @@ a{
   float: left;
   margin-left: 10px;
 }
+.sectionHead:hover{
+  cursor:pointer;
+}
+
 #billingInfo{
+  border: solid 1px #999;
+  padding: 15px;
+  width: 97%;
+  margin-bottom: 15px;
+}
+#paymentInfo{
   border: solid 1px #999;
   padding: 15px;
   width: 98%;
   margin-bottom: 15px;
-
 }
+
 #billingInfo .adress{
   width: 72%;
   height: 24px;
