--- a/style.css
+++ b/style.css
@@ -668,8 +668,12 @@ span.outStock{
 .btn:hover{
     background-color: grey;
 }
-
-
+.ab-nav.breadcrumb{
+    margin-bottom: 30px;
+}
+.margin-right-xs{
+    margin-right: 5px;
+}
 footer{
     background-color: black;
     height: 180px;
