--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,49 @@ menu, nav,input{
     outline:none;
 }
 
+/* ------ breadcrumb ----- */
+ol.breadcrumb{
+    background-color: white;
+    list-style-type: none;
+    width: 850px;
+    margin: 0 auto;
+    margin-top: 20px;
+    padding: 8px;
+}
+ol.breadcrumb li{
+   display: inline; 
+   color:black;
+   font-size:18px;
+   transform: translateZ(0);
+   transition-property: color;
+   transition-duration: 0.3s;
+}
+ol.breadcrumb li.active span{
+  color:black;
+  background-color: white;
+  padding: 8px;
+}
+ol.breadcrumb li a:hover{
+  background-color: red;
+  color:white;
+  cursor:pointer;
+  padding: 8px;
+  text-decoration: none;
+  transform: scaleY(3);
+  transform: translateZ(0);
+  transition-property: color;
+  transition-duration: 0.3s;
+}
+/*ol.breadcrumb li a:hover:before, ol.breadcrumb li a:focus:before ,ol.breadcrumb li a:active:before{
+    transform: scaleY(2);
+}*/
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+
 main{
    min-height: 100%;
 }
@@ -278,7 +321,7 @@ img.logo{
     background-color: #F0F0F0;
     margin-left: 230px;
     position: absolute;
-    margin-top: 58px;
+    margin-top: 10px;
 }
 
 #music-genre div{
@@ -555,7 +598,7 @@ main .info-head p.head-artist{
     float: left;
     top: 171px;
     position: absolute;
-    margin-top: 10px;
+    margin-top: 20px;
     height: 400px;
 }
 
@@ -848,9 +891,7 @@ span.outStock{
     width: 100%;
     min-height:100%;
 =======
-.ab-nav.breadcrumb{
-    margin-bottom: 30px;
-}
+
 .margin-right-xs{
     margin-right: 5px;
     
@@ -865,5 +906,3 @@ footer{
     left: 50%;
     bottom: 0;
 }
-
-
