--- a/css/checkout.css
+++ b/css/checkout.css
@@ -10,6 +10,29 @@ main{
   min-height: 100%;
   height:1100px
 }
+
+.chackout.ng-enter, .chackout.ng-leave{ 
+    -webkit-transition: 10000ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+    -moz-transition: 10000ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+    -ms-transition: 10000ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+    -o-transition: 10000ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+    transition: 10000ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+} 
+.chackout.ng-enter {
+    top: -100%;
+}
+
+.chackout.ng-enter.ng-enter-active {
+    top: 0;
+}
+.chackout.ng-leave {
+    top: 0;
+}
+.chackout.ng-leave.ng-leave-active{
+    top: 100%;
+}
+
+
 .checkout-status{
   float:left;
   width: 20%;
@@ -183,18 +206,18 @@ a{
 }
 .boxes {
   display: table;
-  width: 100%;
+  width: 102%;
   height: 5%;
 }
 
 .boxes2 {
   display: table;
-  width: 100%;
+  width: 102%;
   height: 5%;
 }
 .boxes3 {
   display: table;
-  width: 100%;
+  width: 102%;
   height: 5%;
 }
 .line1 {
@@ -334,7 +357,7 @@ a{
   height: 60px;
 }
 .billingInfo-row:last-child{
-  height: 50px;
+  height: 25px;
 }
 span{
   color: red;
@@ -351,8 +374,8 @@ input{
   float: right;
   background: #333;
   color: #fff; 
-  padding: 0 15px; 
-  margin: 10px 10px;
+  padding: 0px 15px;
+  margin: 0px 15px;
 }
 .row-half .btn:hover{
   background-color: #666;
@@ -365,7 +388,7 @@ input{
 }
 #paymentInfo{
   padding: 15px;
-  padding: 15px 15px 0 15px;
+  padding: 4px 15px 0 15px;
 }
 .year input{
   width: 100px;
@@ -374,3 +397,71 @@ input{
     margin-top: 15px;
     width: 120px;  
 }
+
+.checkout-status-nav p{
+  text-align: center;
+  margin-top: 22px;
+  font-size:15px;
+}
+
+
+.responce-order{
+  width: 100%;
+  height: auto;
+  float:left;
+  width: 100%;
+  height:auto;
+  margin-left:15px;
+  background-color: inherit;
+  margin-top:10px;
+  padding-left: 15px;
+  background-color: white;
+  border:1px solid green;
+
+}
+
+.responce-order.ng-enter{ 
+    -webkit-transition: 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+    -moz-transition: 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+    -ms-transition: 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+    -o-transition: 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+    transition: 500ms cubic-bezier(0.420, 0.000, 0.580, 1.000) all;
+} 
+.responce-order.ng-enter {
+    top: -100%;
+}
+
+.responce-order.ng-enter.ng-enter-active {
+    top: 0;
+}
+.responce-order.ng-leave {
+    top: 0;
+}
+.responce-order.ng-leave.ng-leave-active{
+    top: 100%;
+}
+
+/*.slide {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+}
+.slide.ng-enter,
+.slide.ng-leave {
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+}
+.slide.ng-enter {
+    top: 80%;
+}
+.slide.ng-enter-active {
+    top: 20%;
+}
+.slide.ng-leave {
+    top: 10%;
+}
+.slide.ng-leave-active {
+    top: -80%;
+}*/
