--- a/css/style.css
+++ b/css/style.css
@@ -257,7 +257,10 @@ img.logo{
     min-height: 100%;
 }
 
-
+#wrapper{
+    width: 900px;
+    margin: 0 auto;
+}
 
 
 /* ------ CART ----- */
@@ -267,8 +270,9 @@ img.logo{
     width: 215px;
     padding: 5px;
     background-color: #F0F0F0;
-    margin-left: 230px;
+   /* margin-left: 230px;*/
     margin-top: 420px;
+    margin-left: 20px;
     /*padding-bottom: 25px;*/
     position: relative;
 }
@@ -320,7 +324,8 @@ img.logo{
 	width: 215px;
     padding: 5px;
     background-color: #F0F0F0;
-    margin-left: 230px;
+ /*   margin-left: 230px;*/
+    margin-left: 20px;
     position: absolute;
     margin-top: 10px;
 }
@@ -466,7 +471,9 @@ main .info-head p.head-artist{
     /*float: left;*/
     width: 800px;
     height: auto;
-    margin-left: 450px;
+    margin: 0 auto;
+    margin-left: 240px;
+    /*margin-left: 450px;*/
 }
 .center{
     margin-left: 15px;
@@ -477,7 +484,8 @@ main .info-head p.head-artist{
 
 #left-albums{
     position: absolute;
-    margin-left: 245px;
+  /*  margin-left: 245px;*/
+    margin-left: 40px;
     margin-top: 430px;
     
 }
@@ -489,7 +497,8 @@ main .info-head p.head-artist{
 #page{
     float: left;
     width: 800px;
-    margin-left: 450px;
+   /* margin-left: 450px;*/
+    margin-left: 240px;
 }
 .page{
     display: inline-table;
@@ -521,9 +530,11 @@ main .info-head p.head-artist{
     color: lightgrey;
     font-size: 10px;
     height: 86px;
-    margin-top: -85px;
+    margin-top: -139px;
     position: absolute;
     background-color: black;
+    opacity:0.8;
+    text-align:center;
 }
 
 
@@ -582,7 +593,7 @@ main .info-head p.head-artist{
 
 .buy{
 /*    display:none ;*/
-    opacity:0.3;
+    opacity:0.4;
 }
 
 .info-manage-album p:last-child{
@@ -600,7 +611,8 @@ main .info-head p.head-artist{
 
 #view-album{
     width: 625px;
-    margin-left: 477px;
+ /*   margin-left: 477px;*/
+    margin-left: 277px;
     float: left;
     top: 171px;
     position: absolute;
